--- a/LocalWeather/index.html
+++ b/LocalWeather/index.html
@@ -14,12 +14,16 @@
     <div class="temperature" data-scale="℃">
         30
     </div>
-    <div class="">
+    <div class="info">
         太原 / 晴 / 5~10m/s
     </div>
     <div class="indices">
-
+        <div class="cloths">
+            穿衣指数：
+        </div>
+        div.
     </div>
 </div>
+<script src="main.js"></script>
 </body>
 </html>
